ahora se pueden modificar vocabularios